- fixing gap on idex page

--- a/styles.scss
+++ b/styles.scss
@@ -75,3 +75,7 @@ blockquote.about {
 @import "scss/cardlist";
 @import "scss/footer";
 @import "scss/field";
+
+.row--front {
+  margin-bottom: -20px;
+}
